--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
                 <h2 class="team-text">Our Team</h2>
                     <ul class="team-card">
                         <li>
-                            <img src="./images/1.png" alt="Mark Guerrero" width="264">
+                            <img src="./images/1.png" alt="Mark Guerrero" width="264" height="260">
                             <h3 class="team-text">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
                         </li>
                         <li>
-                            <img src="./images/2.png" alt="Tom Ford" width="264">
+                            <img src="./images/2.png" alt="Tom Ford" width="264" height="260">
                             <h3 class="team-text">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
                         </li>
                         <li>
-                            <img src="./images/3.png" alt="Camila Garcia" width="264">
+                            <img src="./images/3.png" alt="Camila Garcia" width="264" height="260">
                             <h3 class="team-text">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
                         </li>
                         <li>
-                            <img src="./images/4.png" alt="Daniel Wilson" width="264">
+                            <img src="./images/4.png" alt="Daniel Wilson" width="264" height="260">
                             <h3 class="team-text">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
                         </li>
