--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
         <link rel="stylesheet" href="./css/styles.css">  
     </head>
     <body>
-        <header>
-            <section class="header">
-                <a href="./index.html" class="head-logo"><span class="web">Web</span>studio</a>
-                <nav>   
+        <header class="header">
+            <a href="./index.html" class="head-logo"><span class="web">Web</span>studio</a>
+            <nav>   
                     <ul class="nav">
                         <li>
                             <a href="./index.html" class="nav-link">Studio</a>
@@ -25,8 +24,8 @@
                             <a href="" class="nav-link">Contacts</a>
                         </li>
                     </ul>
-                </nav>
-                <address>
+            </nav>
+            <address>
                     <ul>
                         <li>
                             <a href="mailto:info@devstudio.com" target="_blank" class="address-link">info@devstudio.com</a>
@@ -35,8 +34,7 @@
                             <a href="tel:+110001111111" class="address-link">+11 (000) 111-11-11</a>
                         </li>
                     </ul>
-                </address>
-            </section>
+            </address>
         </header>
         <main>
             <section class="hero">
