--- a/index.html
+++ b/index.html
@@ -43,81 +43,81 @@
             </section>
             <section>
                 <h2>Our Features</h2>
-                    <ul class="section01">
+                    <ul class="section-features">
                         <li>
-                            <h3 class="section01-head">Strategy</h3>
-                            <p class="section01-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                            <h3 class="section-features-head">Strategy</h3>
+                            <p class="section-features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                         </li>
                         <li>
-                            <h3 class="section01-head">Punctuality</h3>
-                            <p class="section01-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                            <h3 class="section-features-head">Punctuality</h3>
+                            <p class="section-features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
                         <li>
-                            <h3 class="section01-head">Diligence</h3>
-                            <p class="section01-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                            <h3 class="section-features-head">Diligence</h3>
+                            <p class="section-features-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                         </li>
                         <li>
-                            <h3 class="section01-head">Technologies</h3>
-                            <p class="section01-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                            <h3 class="section-features-head">Technologies</h3>
+                            <p class="section-features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
                     </ul>
             </section>
             <section class="team">
-                <h2 class="team-head">Our Team</h2>
+                <h2 class="team-prime-head">Our Team</h2>
                     <ul>
                         <li class="team-card">
                             <img src="./images/1.png" alt="Mark Guerrero" width="264" height="260">
-                            <h3 class="team-head3">Mark Guerrero</h3>
+                            <h3 class="team-head">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
                         </li>
                         <li class="team-card">
                             <img src="./images/2.png" alt="Tom Ford" width="264" height="260">
-                            <h3 class="team-head3">Tom Ford</h3>
+                            <h3 class="team-head">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
                         </li>
                         <li class="team-card">
                             <img src="./images/3.png" alt="Camila Garcia" width="264" height="260">
-                            <h3 class="team-head3">Camila Garcia</h3>
+                            <h3 class="team-head">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
                         </li>
                         <li class="team-card">
                             <img src="./images/4.png" alt="Daniel Wilson" width="264" height="260">
-                            <h3 class="team-head3">Daniel Wilson</h3>
+                            <h3 class="team-head">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
                         </li>
                     </ul>
             </section>
             <section class="portfolio">
-                <h2 class="port-head">Our Portfolio</h2>
+                <h2 class="port-prime-head">Our Portfolio</h2>
                 <ul>
                     <li>
                         <img src="./images/Portfolio01.jpg" alt="Banking_App" width="360">
-                        <h3 class="port-head3">Banking App</h3>
+                        <h3 class="port-head">Banking App</h3>
                         <p class="port-text">App</p>
                     </li>
                     <li>
                         <img src="./images/Portfolio02.jpg" alt="Cashless_Payment" width="360">
-                        <h3 class="port-head3">Cashless Payment</h3>
+                        <h3 class="port-head">Cashless Payment</h3>
                         <p class="port-text">Marketing</p>
                     </li>
                     <li>
                         <img src="./images/Portfolio03.jpg" alt="Meditation_App" width="360">
-                        <h3 class="port-head3">Meditation App</h3>
+                        <h3 class="port-head">Meditation App</h3>
                         <p class="port-text">App</p>
                     </li>
                     <li>
                         <img src="./images/Portfolio04.jpg" alt="Taxi_Service" width="360">
-                        <h3 class="port-head3">Taxi Service</h3>
+                        <h3 class="port-head">Taxi Service</h3>
                         <p class="port-text">Marketing</p>
                     </li>
                     <li>
                         <img src="./images/Portfolio05.jpg" alt="Screen_Illustrations" width="360">
-                        <h3 class="port-head3">Screen Illustrations</h3>
+                        <h3 class="port-head">Screen Illustrations</h3>
                         <p class="port-text">Design</p>
                     </li>
                     <li>
                         <img src="./images/Portfolio06.jpg" alt="Online_Courses" width="360">
-                        <h3 class="port-head3">Online Courses</h3>
+                        <h3 class="port-head">Online Courses</h3>
                         <p class="port-text">Marketing</p>
                     </li>
                 </ul>
